# jelly_bridge

./: .gitignore  Cargo.toml  LICENSE
migrations/: 20260711002832_init.sql  20260720131634_create_users_table.sql
src/: config.rs  db.rs  error.rs  logger.rs  main.rs  plex.rs  state.rs
src/cache/: mod.rs  plex_user.rs
src/http/: auth.rs  mod.rs  router.rs
src/http/route/media/: mod.rs  providers.rs
