[package]
name = "jelly_bridge"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
config = "0.15"
dotenvy = "0.15"
quick-xml = { version = "0.41", features = ["serialize"] }
rand = "0.10"
rcgen = { version = "0.14", features = ["pem"] }
reqwest = { version = "0.13", features = ["multipart", "query"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"]}
uuid = { version = "1", features = ["v4"] }
x509-parser = "0.18"
